--- a/src/UILayer/WindowDesign.ui
+++ b/src/UILayer/WindowDesign.ui
@@ -11,14 +11,14 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>TabWidget</string>
+   <string>Telem Test Program</string>
   </property>
   <property name="currentIndex">
-   <number>0</number>
+   <number>1</number>
   </property>
   <widget class="QWidget" name="main">
    <attribute name="title">
-    <string>Tab 1</string>
+    <string>Main</string>
    </attribute>
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
@@ -60,8 +60,14 @@
      </item>
      <item>
       <widget class="QCheckBox" name="sendKeyDriverControlCheckBox">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
        <property name="text">
         <string>Key Driver Control</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
@@ -70,12 +76,18 @@
        <property name="text">
         <string>Driver Control Details</string>
        </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item>
       <widget class="QCheckBox" name="sendFaultsCheckBox">
        <property name="text">
         <string>Faults</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
@@ -84,6 +96,9 @@
        <property name="text">
         <string>Battery Data</string>
        </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item>
@@ -91,12 +106,18 @@
        <property name="text">
         <string>Cmu Data</string>
        </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item>
       <widget class="QCheckBox" name="sendMpptDataCheckBox">
        <property name="text">
         <string>Mppt Data</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
@@ -112,7 +133,7 @@
   </widget>
   <widget class="QWidget" name="KeyDriverControls">
    <attribute name="title">
-    <string>Tab 2</string>
+    <string>KeyDriver</string>
    </attribute>
    <widget class="QWidget" name="formLayoutWidget">
     <property name="geometry">
@@ -120,81 +141,156 @@
       <x>10</x>
       <y>10</y>
       <width>221</width>
-      <height>221</height>
+      <height>233</height>
      </rect>
     </property>
     <layout class="QFormLayout" name="formLayout">
-     <item row="0" column="1">
-      <widget class="QLineEdit" name="driverSetSpeedRpmLineEdit">
-       <property name="text">
-        <string>3.0f</string>
-       </property>
-      </widget>
-     </item>
      <item row="1" column="0">
-      <widget class="QLabel" name="constSetCurrentLabel">
-       <property name="text">
-        <string>Set Current (A):</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QLineEdit" name="driverSetCurrentLineEdit">
-       <property name="text">
-        <string>2.0f</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="0">
-      <widget class="QLabel" name="constActualSpeedLabel">
-       <property name="text">
-        <string>Actual Speed (kph):</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1">
-      <widget class="QLineEdit" name="vehicleVelocityLineEdit">
-       <property name="text">
-        <string>7.0f</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="0">
-      <widget class="QLabel" name="constBusCurrentLabel">
-       <property name="text">
-        <string>Bus Current (A):</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="1">
-      <widget class="QLineEdit" name="busCurrentLineEdit">
-       <property name="text">
-        <string>5.0f</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="0">
-      <widget class="QLabel" name="constBusVoltageLabel">
-       <property name="text">
-        <string>Bus Voltage (V):</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="1">
-      <widget class="QLineEdit" name="busVoltageLineEdit">
-       <property name="text">
-        <string>6.0f</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="0">
       <widget class="QLabel" name="constSetSpeedLabel">
        <property name="text">
         <string>Set Speed (kph):</string>
        </property>
       </widget>
      </item>
+     <item row="1" column="1">
+      <widget class="QDoubleSpinBox" name="driverSetSpeedRpmSpinBox">
+       <property name="buttonSymbols">
+        <enum>QAbstractSpinBox::NoButtons</enum>
+       </property>
+       <property name="correctionMode">
+        <enum>QAbstractSpinBox::CorrectToNearestValue</enum>
+       </property>
+       <property name="prefix">
+        <string/>
+       </property>
+       <property name="decimals">
+        <number>3</number>
+       </property>
+       <property name="maximum">
+        <double>1000.000000000000000</double>
+       </property>
+       <property name="value">
+        <double>3.000000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="constSetCurrentLabel">
+       <property name="text">
+        <string>Set Current (A):</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QDoubleSpinBox" name="driverSetCurrentSpinBox">
+       <property name="buttonSymbols">
+        <enum>QAbstractSpinBox::NoButtons</enum>
+       </property>
+       <property name="correctionMode">
+        <enum>QAbstractSpinBox::CorrectToNearestValue</enum>
+       </property>
+       <property name="prefix">
+        <string/>
+       </property>
+       <property name="decimals">
+        <number>3</number>
+       </property>
+       <property name="maximum">
+        <double>1000.000000000000000</double>
+       </property>
+       <property name="value">
+        <double>2.000000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="constActualSpeedLabel">
+       <property name="text">
+        <string>Actual Speed (kph):</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QDoubleSpinBox" name="vehicleVelocitySpinBox">
+       <property name="buttonSymbols">
+        <enum>QAbstractSpinBox::NoButtons</enum>
+       </property>
+       <property name="correctionMode">
+        <enum>QAbstractSpinBox::CorrectToNearestValue</enum>
+       </property>
+       <property name="prefix">
+        <string/>
+       </property>
+       <property name="decimals">
+        <number>3</number>
+       </property>
+       <property name="maximum">
+        <double>1000.000000000000000</double>
+       </property>
+       <property name="value">
+        <double>7.000000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="0">
+      <widget class="QLabel" name="constBusCurrentLabel">
+       <property name="text">
+        <string>Bus Current (A):</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1">
+      <widget class="QDoubleSpinBox" name="busCurrentSpinBox">
+       <property name="buttonSymbols">
+        <enum>QAbstractSpinBox::NoButtons</enum>
+       </property>
+       <property name="correctionMode">
+        <enum>QAbstractSpinBox::CorrectToNearestValue</enum>
+       </property>
+       <property name="prefix">
+        <string/>
+       </property>
+       <property name="decimals">
+        <number>3</number>
+       </property>
+       <property name="maximum">
+        <double>1000.000000000000000</double>
+       </property>
+       <property name="value">
+        <double>5.000000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="0">
+      <widget class="QLabel" name="constBusVoltageLabel">
+       <property name="text">
+        <string>Bus Voltage (V):</string>
+       </property>
+      </widget>
+     </item>
      <item row="5" column="1">
+      <widget class="QDoubleSpinBox" name="busVoltageSpinBox">
+       <property name="buttonSymbols">
+        <enum>QAbstractSpinBox::NoButtons</enum>
+       </property>
+       <property name="correctionMode">
+        <enum>QAbstractSpinBox::CorrectToNearestValue</enum>
+       </property>
+       <property name="prefix">
+        <string/>
+       </property>
+       <property name="decimals">
+        <number>3</number>
+       </property>
+       <property name="maximum">
+        <double>1000.000000000000000</double>
+       </property>
+       <property name="value">
+        <double>6.000000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="1">
       <widget class="QPushButton" name="keyDriverControlsSubmitButton">
        <property name="text">
         <string>Submit</string>
@@ -206,7 +302,7 @@
   </widget>
   <widget class="QWidget" name="DriverControlDetails">
    <attribute name="title">
-    <string>Page</string>
+    <string>DriverControl</string>
    </attribute>
    <widget class="QWidget" name="formLayoutWidget_2">
     <property name="geometry">
